apps/downloads/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr:amd64-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
              name: http-sonarr
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 8989
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8989
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: sonarr-config
            - mountPath: /tv
              name: sonarr-tvshows
            - mountPath: /downloads
              name: sonarr-downloads                            
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: pvc-sonarr-config
        - name: sonarr-tvshows
          persistentVolumeClaim:
            claimName: pvc-sonarr-tvshows
        - name: sonarr-downloads
          persistentVolumeClaim:
            claimName: pvc-sonarr-downloads
