apps/downloads/sonarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-sonarr
  namespace: downloads
spec:
  ports:
    - port: 8989
      protocol: TCP
      targetPort: http-sonarr
  selector:
    app: sonarr
