apps/downloads/sonarr/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: sonarr
  namespace: downloads  
  name: sonarr-ingress
  annotations:

spec:
  rules:
  - host: serier.ting
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-sonarr
            port:
              number: 8989
